--- a/src/css/mainPageGames.css
+++ b/src/css/mainPageGames.css
@@ -69,9 +69,10 @@
 }
 
 .uc1 > button {
-  background-color: #42b7df;
+  color: white;
+  background-color: #222223;
   padding: 10px;
-  border: 1px solid #42b7df;
+  border: 3px solid #42b7df;
   border-radius: 5px;
 }
 
