--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,55 @@
 body{
     background-color: #222223;
+    height: 100vh;
+}
+
+.anyLink{
+    text-decoration: none;
+    color: white;
+}
+
+@media (max-width: 768px) {
+  header {
+    align-items: flex-start;
+    height: auto;
+  }
+
+  .account{
+    width: 100%;
+    justify-content: space-between;
+    margin-left: 25px;
+    margin-top: 25px;
+  }
+
+  .loginAndRegister{
+    width: 150px;
+  }
+
+  .category2{
+    display: none;
+
+  }
+
+  .header-img {
+    align-self: center;
+    margin: 10px 0;
+  }
+
+  .pubgBackground{
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    padding: 10px;
+  }
+
+  .fa-cart-shopping {
+    margin-top: 40px !important;
+  }
+
+  .headerInput {
+     display: none;
+  }
 }
